First pass at sorting and filtering options

--- a/styles.css
+++ b/styles.css
@@ -37,20 +37,66 @@ body {
 	text-align: left;
 	text-decoration: none;
 	color: #333;
+	background-color: #FDB70F;
 }
+
+.noSelect,
+.noSelect * {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-user-drag: none;
+	user-drag: none;
+}
+
 
 .container{
 	position: relative;
-}
-
-.product-list{
-	display: flex;
-	flex-flow: row wrap;
-	padding: 0.5rem;
 	background-color: #fff;
 }
 
-.product-list li{
+header .logo{
+	background-color: #000;
+}
+header .sort-filter{
+	display: flex;
+	flex-flow: row wrap;
+	padding: 1rem;
+}
+header .sort-filter .category-list{
+	width: 100%;
+}
+header .sort-filter .status-list,
+header .sort-filter .sort-list{
+	flex: 1;
+}
+.sort-filter .item{
+	display: block;
+	cursor: pointer;
+	font-weight: 800;
+	font-size: 0.875rem;
+}
+.sort-filter .item .box{
+	font-weight: 400;
+	font-size: 1.5rem;
+}
+
+.status-list ul{
+	display: block;
+	padding: 0.5rem;
+}
+.status-list li {
+	display: block;
+}
+
+.flex-list{
+	display: flex;
+	flex-flow: row wrap;
+	padding: 0.5rem;
+}
+
+.flex-list li{
 	flex: 1 50%;
 	max-width: 50%;
 	display: block;
@@ -94,6 +140,9 @@ body {
 	line-height: 1.5rem;
 	font-weight: 600;
 }
+.product .characters{
+	white-space: pre-wrap;
+}
 
 .category-1{ color: #005879; }
 .category-2{ color: #a0005f; }
@@ -110,7 +159,7 @@ body {
 		padding: 0 0 1rem 0;
 		margin: 0 auto;
 	}
-	.product-list li{
+	.product-list .flex-list li{
 		flex: 1 33.3333333%;
 		max-width: 33.3333333%;
 	}
@@ -120,7 +169,10 @@ body {
 	.container{
 		width: 800px;
 	}
-	.product-list li{
+	header .sort-filter .category-list{
+		flex: 2;
+	}
+	.product-list .flex-list li{
 		flex: 1 25%;
 		max-width: 25%;
 	}
