--- a/styles.css
+++ b/styles.css
@@ -27,17 +27,20 @@ html {
 }
 
 body {
-	background-color: #000;
 	font-size: 1rem;
 	line-height: 1.5rem;
 	font-weight: 400;
 	font-style: normal;
 	vertical-align: top;
-	font-family: sans-serif;
+	font-family: 'Roboto Condensed', sans-serif;
 	text-align: left;
 	text-decoration: none;
 	color: #333;
 	background-color: #FDB70F;
+}
+
+strong{
+	font-weight: 800;
 }
 
 .noSelect,
@@ -62,7 +65,7 @@ header .logo{
 header .sort-filter{
 	display: flex;
 	flex-flow: row wrap;
-	padding: 1rem;
+	padding: 0.5rem;
 }
 header .sort-filter .category-list{
 	width: 100%;
@@ -74,7 +77,7 @@ header .sort-filter .sort-list{
 .sort-filter .item{
 	display: block;
 	cursor: pointer;
-	font-weight: 800;
+	font-weight: 600;
 	font-size: 0.875rem;
 }
 .sort-filter .item .box{
@@ -99,20 +102,26 @@ header .sort-filter .sort-list{
 .flex-list li{
 	flex: 1 50%;
 	max-width: 50%;
-	display: block;
+	display: flex;
 }
 
 .product {
-	padding: 0.5rem;
+	display: block;
+	flex-grow: 1;
+	margin: 0.25rem;
+	border: 1px solid rgba(0,0,0,0.25);
+	border-radius: 0.25rem;
+	font-size: 0.875rem;
+	line-height: 1rem;
 }
 .product span{
 	display: block;
-	font-size: 0.75rem;
-	line-height: 0.875rem;
+}
+.product .description{
+	padding: 0.5rem;
 }
 .product .image{
 	position: relative;
-	border: 1px solid rgba(0,0,0,0.25);
 	padding-bottom: 100%;
 	overflow: hidden;
 }
@@ -120,7 +129,7 @@ header .sort-filter .sort-list{
 	position: absolute;
 	left: 0;
 	right: 0;
-	top: 0.5rem;
+	top: 0;
 	bottom: 0.5rem;
 	text-align: center;
 }
@@ -144,6 +153,8 @@ header .sort-filter .sort-list{
 	white-space: pre-wrap;
 }
 
+.instock-true{ color: #090; }
+.instock-false{ color: #900; }
 .category-1{ color: #005879; }
 .category-2{ color: #a0005f; }
 .category-3{ color: #a08f00; }
