--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,16 @@ h1{
 	line-height: 3rem;
 	font-weight: 800;
 }
+h2{
+	font-size: 1.5rem;
+	line-height: 3rem;
+	font-weight: 800;
+}
+h4{
+	font-size: 1.1rem;
+	line-height: 2rem;
+	font-weight: 800;
+}
 h1, p{
 	padding-bottom: 1rem;
 }
