--- a/styles.css
+++ b/styles.css
@@ -177,9 +177,9 @@ a:link{
 	font-weight: 600;
 	font-size: 0.875rem;
 }
-.sort-filter .item .box{
-	font-weight: 400;
-	font-size: 1.5rem;
+.sort-filter .flex-list li a{
+	display: block;
+	width: 100%;
 }
 
 .status-list ul{
@@ -206,10 +206,6 @@ a:link{
 	flex: 1 50%;
 	max-width: 50%;
 	display: flex;
-}
-.flex-list li a{
-	display: block;
-	width: 100%;
 }
 
 .product-list .flex-list{
