--- a/styles.css
+++ b/styles.css
@@ -281,11 +281,11 @@ a:link{
 	font-weight: 800;
 }
 
-.prices-table-holder{
+.prices-table-holder, .grab-bags-table-holder{
 	overflow: auto;
 }
 
-.prices-table{
+.prices-table, .grab-bags-table{
 	margin-bottom: 1rem;
 	vertical-align: middle;
 	border-spacing: 0px;
@@ -294,7 +294,9 @@ a:link{
 }
 
 .prices-table td,
-.prices-table th{
+.prices-table th,
+.grab-bags-table td,
+.grab-bags-table th{
 	padding: 0.25rem 0.5rem;
 	border: 1px solid #bbb;
 	border-width: 0 1px 1px 0;
@@ -317,6 +319,26 @@ a:link{
 .prices-table .optional{
 	background-color: #eee;
 }
+
+.super-gold{
+	background-color: #fed46f;
+}
+
+.grab-bags-table thead th{
+	background-color: #ddd;
+}
+.grab-bags-table tbody th{
+	background-color: #eee;
+}
+.grab-bags-table .category-1{ color: #005879; }
+.grab-bags-table .category-2{ color: #a0005f; }
+.grab-bags-table .category-3{ color: #a08f00; }
+.grab-bags-table .category-4{ color: #401082; }
+.grab-bags-table .category-5{ color: #017739; }
+.grab-bags-table .category-6{ color: #930308; }
+.grab-bags-table .category-0{ color: #444; }
+
+
 
 
 /* medium */
