--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ a:link{
 	width: 1rem;
 	height: 1rem;
 	background-image: url('content/symbols.svg');
-	background-size: 6rem 1rem;
+	background-size: 7rem 1rem;
 	background-position: top left;
 	vertical-align: text-top;
 }
@@ -161,6 +161,9 @@ a:link{
 }
 .symbol.Retired{
 	background-position-x: -5rem;
+}
+.symbol.Unreleased{
+	background-position-x: -6rem;
 }
 
 .sort-filter{
